// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenu [common] example testing should match snapshot(s) for Basic 1`] = `
<span
  class="lucid-ContextMenu"
>
  <button
    class="lucid-Button"
    type="button"
  >
    <span
      class="lucid-Button-content"
    >
      Target
    </span>
  </button>
</span>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for BasicWithText 1`] = `
<section>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget tempor mi. Curabitur eget risus ac diam euismod ultricies ac in est. Morbi in vehicula arcu, at laoreet libero. Phasellus nisi dolor, porta et erat quis, egestas mattis purus.
  <span
    class="lucid-ContextMenu"
  >
    <button
      class="lucid-Button"
      type="button"
    >
      <span
        class="lucid-Button-content"
      >
        Target
      </span>
    </button>
  </span>
  Sed vel ex iaculis, tincidunt magna in, fringilla urna. Aenean congue est nec elit molestie, nec mollis mi rutrum. Quisque hendrerit nisl placerat tempus sodales. Vivamus et tortor vulputate, elementum turpis tempor, condimentum sapien. Nunc ac imperdiet ipsum, vitae ullamcorper sem.
</section>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for DirectionsInteractive 1`] = `
<section>
  <section
    style="display:flex;flex-direction:column"
  >
    <div
      class="lucid-DropMenu lucid-DropMenu-base lucid-SingleSelect"
    >
      <span
        class="lucid-ContextMenu"
      >
        <div
          class="lucid-DropMenu-Control"
          tabindex="0"
        >
          <div
            class="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-null-option"
            tabindex="0"
          >
            <span
              class="lucid-SingleSelect-Control-content"
            >
              Select a direction
            </span>
            <svg
              class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
              height="12"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M.5 4.5l7.5 7 7.5-7"
              />
            </svg>
          </div>
        </div>
      </span>
    </div>
    directonOffset:
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      style="width:100px"
      type="text"
      value="0"
    />
    <div
      class="lucid-DropMenu lucid-DropMenu-base lucid-SingleSelect"
    >
      <span
        class="lucid-ContextMenu"
      >
        <div
          class="lucid-DropMenu-Control"
          tabindex="0"
        >
          <div
            class="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-null-option"
            tabindex="0"
          >
            <span
              class="lucid-SingleSelect-Control-content"
            >
              Select an alignment
            </span>
            <svg
              class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
              height="12"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M.5 4.5l7.5 7 7.5-7"
              />
            </svg>
          </div>
        </div>
      </span>
    </div>
    alignmentOffset:
    <input
      class="lucid-TextField lucid-TextField-is-single-line"
      rows="5"
      style="width:100px"
      type="text"
      value="0"
    />
    getAlignmentOffset:
    <input
      class="lucid-TextField lucid-TextField-is-disabled lucid-TextField-is-single-line"
      disabled=""
      rows="5"
      style="width:100px"
      type="text"
      value=""
    />
    <code />
  </section>
  <section
    style="display:flex;flex-direction:row;justify-content:center;margin:90px"
  >
    <span
      class="lucid-ContextMenu"
    >
      Target
    </span>
  </section>
</section>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for DirectionsStatic 1`] = `
<section
  style="display:flex;flex-direction:row;margin:0 60px"
>
  <section
    style="display:flex;flex-direction:column;align-items:center;flex-grow:1"
  >
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
  </section>
  <section
    style="display:flex;flex-direction:column;align-items:center;flex-grow:1"
  >
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
  </section>
  <section
    style="display:flex;flex-direction:column;align-items:center;flex-grow:1"
  >
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
  </section>
  <section
    style="display:flex;flex-direction:column;align-items:center;flex-grow:1"
  >
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
    <div
      style="margin-top:120px"
    >
      <span
        class="lucid-ContextMenu"
      >
        Target
      </span>
    </div>
  </section>
</section>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for MenuBar 1`] = `
<section>
  <span
    class="lucid-ContextMenu"
  >
    <div
      style="background:#eaeaea;outline:solid 1px #d1d1d1;padding:4px;cursor:pointer"
    >
      File
    </div>
  </span>
  <span
    class="lucid-ContextMenu"
  >
    <div
      style="background:#eaeaea;outline:solid 1px #d1d1d1;padding:4px;cursor:pointer"
    >
      Edit
    </div>
  </span>
</section>
`;
